/  __ \ |         | |
| /  \/ |__   __ _| | _____  _ __ __ _
| |   | '_ \ / _` | |/ / _ \| '__/ _` |
| \__/\ | | | (_| |   < (_) | | | (_| |
 \____/_| |_|\__,_|_|\_\___/|_|  \__,_|

                 CHANGELOG
---------------------------------------

Current Devel

1.0.0-alpha2
	- HostServ: Update hostserv/main to match the updated API.
	- Config/Modules: nickserv/register now allows you to set a maximum number of accounts an email can be associated with and enforces it.
	- Modules: Finished nickserv/drop
	- Chakora: Made soper.conf for services oper powers.
	- Modules: nickserv/info: Added support to provide last real host to sopers with nickserv:fullinfo
	- Modules: Added chanserv/mute
	- Modules: Added chanserv/clear
	- Modules: Added operserv/raw
	- Chakora: Class::Unload is now a dependency.
	- API: Module init handlers can now return 0 for an unsuccessful loading.
	- HostServ: Added hostserv/help and hostserv/assign (with UNASSIGN).
	- API: Moved services-related subs to src/API/Services.pm.
	- Modules: Added operserv/restart for performing a more clean services restart.
	- NickServ: Re-identify users when possible after restarting.
	- Protocols: Update the accountname in memory when changing the accountname on the IRCd.
	- Protocols: Delete a user's data from memory when KILLed by services.
	- Protocols: Delete a server's data as well as the data of it's users when SQUIT'd by services.
	- Protocols: When JUPE'ing a server, delete the data of it's users from memory.

1.0.0-alpha1
	- InspIRCd: Join after the ircd is done bursting to us
	- InspIRCd: Store TS
	- InspIRCd: Use FJOIN properly
	- All: Fixed a few possible small memory leaks
	- Protocols: Added serv_cmode, for a regular MODE command
	- InspIRCd: m_servprotect is no longer required
	- Module API: Store module author and version for module listing
	- API: Added ctcp_reply
	- Setup: We no longer provide a config generator, we now provide an example config for you to edit